code commit@Rahul
modification in form according ovservation (Jan - 7)

--- a/src/main/resources/templates/layouts/Master/StoreMaster.html
+++ b/src/main/resources/templates/layouts/Master/StoreMaster.html
@@ -123,7 +123,7 @@
 
 
 
-													<div class="form-group col-md-12">
+													<!-- <div class="form-group col-md-12">
 														<label class="form-label">Type</label> <label
 															style="color: red">*</label> <select class="form-control"
 															id="" title="type" th:field="*{storeType}" required>
@@ -131,7 +131,7 @@
 															<option value="S">Store</option>
 															<option value="G">Godown</option>
 														</select>
-													</div>
+													</div> -->
 
 													<div class="form-group col-md-12">
 														<label for="inputEmail4">Location</label> <input
@@ -139,7 +139,7 @@
 															title="location" th:field="*{location}">
 													</div>
 
-													<div class="form-group col-md-12">
+													<!-- <div class="form-group col-md-12">
 														<label class="form-label">Status</label> <select
 															class="form-control" id="" title="status"
 															th:field="*{storeStatus}">
@@ -149,7 +149,7 @@
 															<option value="N">Non-Functioanl</option>
 														</select>
 													</div>
-
+ -->
 
 
 													<label class="checkbox-inline"> <input type="radio"
