--- a/src/main/resources/templates/layouts/editview/editStore.html
+++ b/src/main/resources/templates/layouts/editview/editStore.html
@@ -94,7 +94,7 @@
 													</div>
 
 
-													<div class="form-group col-md-12">
+													<!-- <div class="form-group col-md-12">
 														<label class="form-label">Type</label> <label
 															style="color: red">*</label> <select class="form-control"
 															id="" title="type" th:field="*{storeType}" required>
@@ -102,7 +102,7 @@
 															<option value="S">Store</option>
 															<option value="G">Godown</option>
 														</select>
-													</div>
+													</div> -->
 
 													<div class="form-group col-md-12">
 														<label for="inputEmail4">Location</label> <input
@@ -119,7 +119,7 @@
 
 
 
-													<div class="form-group col-md-12">
+													<!-- <div class="form-group col-md-12">
 														<label class="form-label">Status</label> <select
 															class="form-control" id="" title="status"
 															th:field="*{storeStatus}">
@@ -128,7 +128,7 @@
 															<option value="F" selected>Functional</option>
 															<option value="Nl">Non-Functioanl</option>
 														</select>
-													</div>
+													</div> -->
 
 													<label class="checkbox-inline"> <input type="radio"
 														value="Y" name="active" checked style="margin-left: 5px">Active
