--- a/src/main/resources/templates/layouts/listview/listofstore.html
+++ b/src/main/resources/templates/layouts/listview/listofstore.html
@@ -55,7 +55,7 @@
 															<th scope="col">#</th>
 															<th scope="col">Store Code</th>
 
-															<th scope="col">Type</th>
+															<!-- <th scope="col">Type</th> -->
 															<th scope="col">Location</th>
 															<th scope="col">Description</th>
 
@@ -70,8 +70,8 @@
 															<td th:text="${iter.index}">1</td>
 															<td th:text="${store.storeCode}">Garrett Winters</td>
 														
-															<td th:if="${store.storeType}=='S' ">Store</td>
-															<td th:if="${store.storeType}=='G' ">Godown</td>
+															<!-- <td th:if="${store.storeType}=='S' ">Store</td>
+															<td th:if="${store.storeType}=='G' ">Godown</td> -->
 															
 															
 															<td th:text="${store.location}">Garrett Winters</td>
