--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -113,8 +113,11 @@
 							
 							<li th:if="${#request.isUserInRole('UOM(UNITOFMEASUREMENT)') or #request.isUserInRole('ADMIN')}"><a th:href="@{/uom/}"><i class="fa fa-circle-o"></i>
 									UOM(Unit of Measurement)</a></li>
-							<li th:if="${#request.isUserInRole('SERVICECATEGORY') or #request.isUserInRole('ADMIN')}"><a th:href="@{/servicecategory/}"><i
-									class="fa fa-circle-o"></i> Service Category</a></li>
+							
+							<!-- <li th:if="${#request.isUserInRole('SERVICECATEGORY') or #request.isUserInRole('ADMIN')}"><a th:href="@{/servicecategory/}"><i
+									class="fa fa-circle-o"></i> Service Category</a></li> -->
+									
+									
 							<li th:if="${#request.isUserInRole('PARTYMASTER') or #request.isUserInRole('ADMIN')}"><a th:href="@{/party/}"><i class="fa fa-circle-o"></i>
 									Party Master</a></li>
 
@@ -127,8 +130,7 @@
 
 
 
-					<li><a href="#"><i class="fa fa-circle-o"></i>Employee
-							Info <i class="fa fa-angle-left pull-right"></i></a>
+					<li><a href="#"><i class="fa fa-circle-o"></i>Region <i class="fa fa-angle-left pull-right"></i></a>
 						<ul class="treeview-menu">
 
 							<li th:if="${#request.isUserInRole('COUNTRY') or #request.isUserInRole('ADMIN')}" ><a th:href="@{/country/}"><i class="fa fa-circle-o"></i>
@@ -138,10 +140,10 @@
 							<li th:if="${#request.isUserInRole('CITY') or #request.isUserInRole('ADMIN')}" ><a th:href="@{/city/}"><i class="fa fa-circle-o"></i>
 									City</a></li>
 
-							<li th:if="${#request.isUserInRole('DEPARTMENT') or #request.isUserInRole('ADMIN')}"><a th:href="@{/department/}"><i
-									class="fa fa-circle-o"></i> Department</a></li>
-							<li th:if="${#request.isUserInRole('DESIGNATION') or #request.isUserInRole('ADMIN')}"><a th:href="@{/designation/}"><i
-									class="fa fa-circle-o"></i> Designation</a></li>
+							<!-- <li th:if="${#request.isUserInRole('DEPARTMENT') or #request.isUserInRole('ADMIN')}"><a th:href="@{/department/}"><i
+									class="fa fa-circle-o"></i> Department</a></li> -->
+							<!-- <li th:if="${#request.isUserInRole('DESIGNATION') or #request.isUserInRole('ADMIN')}"><a th:href="@{/designation/}"><i
+									class="fa fa-circle-o"></i> Designation</a></li> -->
 
 
 
