--- a/src/main/resources/templates/layouts/Master/UOM.html
+++ b/src/main/resources/templates/layouts/Master/UOM.html
@@ -138,7 +138,7 @@
 													</div>
 
 
-													<div class="form-group col-md-12">
+													<!-- <div class="form-group col-md-12">
 														<label class="form-label">Measurement System</label> <select
 															class="form-control" title="measurement system"
 															th:field="*{measurementSystem}">
@@ -147,7 +147,7 @@
 															<option value="F">French</option>
 
 														</select>
-													</div>
+													</div> -->
 
 
 
