--- a/src/main/resources/templates/layouts/Master/categoryMaster.html
+++ b/src/main/resources/templates/layouts/Master/categoryMaster.html
@@ -138,7 +138,7 @@
 															required>
 													</div>
 
-													<div class="form-group col-md-6">
+													<!-- <div class="form-group col-md-6">
 														<label class="form-label">Account Head</label> <select
 															class="form-control" id="" th:field="*{accountHead}"
 															title="account head">
@@ -146,30 +146,30 @@
 															<option value="1">type-1</option>
 															<option value="2">type-2</option>
 														</select>
-													</div>
+													</div> -->
 
 
-													<div class="form-group col-md-6">
+													<!-- <div class="form-group col-md-6">
 														<label for="inputEmail4">Account Description</label> <input
 															type="text" class="form-control"
 															placeholder="Account Description"
 															title="account discription"
 															th:field="*{accountDescription}">
-													</div>
+													</div> -->
 
-													<div class="form-group col-md-6">
+													<!-- <div class="form-group col-md-6">
 														<label for="inputEmail4">Parent Code</label> <input
 															type="text" class="form-control uppercase  textOnly"
 															maxlength="2" placeholder="Parent Code"
 															th:field="*{parentCode}" title="parent code">
-													</div>
+													</div> -->
 
-													<div class="form-group col-md-6">
+													<!-- <div class="form-group col-md-6">
 														<label for="inputEmail4">Parent Name</label> <input
 															type="text" class="form-control "
 															placeholder="Parent Name" th:field="*{parentName}"
 															title="parent name">
-													</div>
+													</div> -->
 
 													<label class="checkbox-inline"> <input type="radio"
 														value="Y" name="active" checked style="margin-left: 5px">Active
