--- a/src/main/resources/templates/layouts/Master/city.html
+++ b/src/main/resources/templates/layouts/Master/city.html
@@ -151,11 +151,11 @@
 														</select>
 													</div>
 
-													<div class="form-group col-md-12">
+													<!-- <div class="form-group col-md-12">
 														<label for="inputEmail4">District</label> <input
 															type="text" class="form-control" placeholder="district"
 															th:field="*{district}">
-													</div>
+													</div> -->
 
 													<!-- 	<div class="form-group col-md-6">
 														<label for="inputEmail4">City Type</label> <input
