--- a/src/main/resources/templates/layouts/editview/editCategory.html
+++ b/src/main/resources/templates/layouts/editview/editCategory.html
@@ -107,7 +107,7 @@
 															placeholder="Discription" th:field="*{description}">
 													</div>
 
-													<div class="form-group col-md-6">
+													<!-- <div class="form-group col-md-6">
 														<label class="form-label">Account Head</label><select
 															class="form-control" id="" title="type"
 															th:field="*{accountHead}">
@@ -115,27 +115,27 @@
 															<option value="1">type-1</option>
 															<option value="2">type-2</option>
 														</select>
-													</div>
+													</div> -->
 
 
-													<div class="form-group col-md-6">
+													<!-- <div class="form-group col-md-6">
 														<label for="inputEmail4">Account Description</label> <input
 															type="text" class="form-control"
 															placeholder="description"
 															th:field="*{accountDescription}">
-													</div>
+													</div> -->
 
-													<div class="form-group col-md-6">
+													<!-- <div class="form-group col-md-6">
 														<label for="inputEmail4">Parent Code</label> <input
 															type="text" class="form-control"
 															placeholder="parent code" th:field="*{parentCode}">
-													</div>
+													</div> -->
 
-													<div class="form-group col-md-6">
+													<!-- <div class="form-group col-md-6">
 														<label for="inputEmail4">Parent Name</label> <input
 															type="text" class="form-control"
 															placeholder="parent name" th:field="*{parentName}">
-													</div>
+													</div> -->
 													<label class="checkbox-inline"> <input type="radio"
 														value="Y" name="active" checked style="margin-left: 5px">Active
 														<input type="radio" value="N" name="active"
