--- a/src/main/resources/templates/layouts/editview/editCity.html
+++ b/src/main/resources/templates/layouts/editview/editCity.html
@@ -123,11 +123,12 @@
 														</select>
 													</div>
 
-													<div class="form-group col-md-12">
+													<!-- <div class="form-group col-md-12">
 														<label for="inputEmail4">District</label> <input
 															type="text" class="form-control" placeholder="district"
 															th:field="*{district}">
-													</div>
+													</div> -->
+													
 													<!-- 	<div class="form-group col-md-6">
 														<label for="inputEmail4">City Type</label> <input
 															type="text" class="form-control" placeholder="city type"
