--- a/src/main/resources/templates/layouts/editview/editCompany.html
+++ b/src/main/resources/templates/layouts/editview/editCompany.html
@@ -110,7 +110,7 @@
 											onclick="history.back()">
 											<i class="fa fa-step-backward"></i> Go Back
 										</button>
-										
+
 										<a th:href="@{/companypdf}" target="_blank"
 											class="btn btn-success btn-sm"> <i
 											class="fa fa-file-pdf-o" style='font-size: 20px'></i>Generate
@@ -132,17 +132,17 @@
 											<ul class="nav nav-pills">
 												<li class="active"><a data-toggle="tab"
 													href="#companydetail">Company Detail</a></li>
-												<li><a data-toggle="tab" href="#tdsinfo">TDS
-														Information</a></li>
+												<!-- 	<li><a data-toggle="tab" href="#tdsinfo">TDS
+														Information</a></li> -->
 												<li><a data-toggle="tab" href="#taxreg">Tax
-														Registration No</a></li>
-												<li><a data-toggle="tab" href="#importdetail">Import
-														Detail</a></li>
-												<li><a data-toggle="tab" href="#insurancedetail">Insurance
-														Detail</a></li>
-												<li><a data-toggle="tab" href="#siteoffices">Site
+														Registration</a></li>
+												<!-- <li><a data-toggle="tab" href="#importdetail">Import
+														Detail</a></li> -->
+												<!-- <li><a data-toggle="tab" href="#insurancedetail">Insurance
+														Detail</a></li> -->
+												<!-- <li><a data-toggle="tab" href="#siteoffices">Site
 														Offices</a></li>
-
+ -->
 
 											</ul>
 
@@ -204,41 +204,40 @@
 																			th:field="*{pfNumber}" title="pf number"
 																			onkeypress="return alpha(event)">
 																	</div>
-																	<div class="form-group col-md-4">
+																	<!-- <div class="form-group col-md-4">
 																		<label for="inputPassword4">Parent Code</label> <input
 																			type="text" class="form-control uppercase"
 																			title="parent code" placeholder="Parent Code"
 																			th:field="*{parentCode}" maxlength='2'>
-																	</div>
+																	</div> -->
 																	<div class="form-group col-md-4">
 																		<label for="inputEmail4">Calculate ESI</label> <select
 																			class="form-control" th:field="*{calculateEsi}"
 																			id="calculateEsi" title="calculate esi" required
 																			onchange='selectCalculateEsi()'>
-
-																			<option value="Y">Yes</option>
 																			<option value="N">No</option>
+																			<option value="Y">Yes</option>
+
 
 																		</select>
 
 																	</div>
 
 																	<div class="form-group col-md-4">
-																		<label for="inputPassword4">ESI Number</label><span
-																			style='color: red'>*</span> <input type="text"
+																		<label for="inputPassword4">ESI Number</label> <input type="text"
 																			class="form-control" title="esi number"
 																			id="esiNumber" placeholder="Esi Number"
 																			onkeypress="if ( isNaN(this.value + String.fromCharCode(event.keyCode) )) return false;"
-																			th:field="*{esiNo}" required>
+																			th:field="*{esiNo}">
 																	</div>
 
-																	<div class="form-group col-md-4">
+																	<!-- <div class="form-group col-md-4">
 																		<label for="inputAddress">Import Data</label> <input
 																			type="text" class="form-control" title="import data"
 																			id="inputAddress" placeholder="Import Data">
-																	</div>
+																	</div> -->
 
-																	<div class="form-group col-md-4">
+																	<!-- <div class="form-group col-md-4">
 																		<label for="inputPassword4">Tax Account(Sale)</label>
 																		<input type="text" class="form-control"
 																			id="inputPassword4" placeholder="Tax" title="tax"
@@ -263,7 +262,7 @@
 
 																		</select>
 																	</div>
-
+ -->
 
 
 
@@ -397,7 +396,7 @@
 																			<label for="" class="col-md-2 control-label">WebSite</label>
 																			<div class="col-md-4">
 
-																				<input type="url" class="form-control" id=""
+																				<input type="text" class="form-control" id=""
 																					placeholder="Website" title="website"
 																					th:field="*{cWebsite}">
 																			</div>
@@ -474,7 +473,7 @@
 
 
 												<!-- tds information detail -->
-												<div id="tdsinfo" class="tab-pane fade">
+												<!-- <div id="tdsinfo" class="tab-pane fade">
 
 													<p></p>
 													<div class="box">
@@ -596,7 +595,7 @@
 														</div>
 													</div>
 
-												</div>
+												</div> -->
 												<!--end tds information detail -->
 
 
@@ -631,7 +630,7 @@
 															</div>
 															<div class="form-group col-md-6">
 																<label for="inputPassword4">Taxpayer Trade
-																	Number</label> <input type="password" class="form-control"
+																	Number</label> <input type="text" class="form-control"
 																	id="inputPassword4" placeholder="Taxpayer Trade Number"
 																	title="taxpayer trade number"
 																	th:field="*{taxPayerTradeName}">
@@ -652,7 +651,7 @@
 												<!--end tax registration detail -->
 
 												<!-- import detail -->
-												<div id="importdetail" class="tab-pane fade">
+												<!-- <div id="importdetail" class="tab-pane fade">
 													<p></p>
 													<div class="row box">
 
@@ -711,11 +710,11 @@
 													</div>
 
 
-												</div>
+												</div> -->
 												<!--end import detail tab -->
 
 												<!-- insurance detail -->
-												<div id="insurancedetail" class="tab-pane fade">
+												<!-- <div id="insurancedetail" class="tab-pane fade">
 													<p></p>
 													<div class="box">
 														<h5>Insurance Details</h5>
@@ -804,11 +803,11 @@
 
 													</div>
 
-												</div>
+												</div> -->
 												<!--end insurance detail -->
 
 												<!-- site offices detail -->
-												<div id="siteoffices" class="tab-pane fade">
+												<!-- <div id="siteoffices" class="tab-pane fade">
 
 													<div class="box">
 														<h5>Site Offices</h5>
@@ -884,7 +883,7 @@
 
 
 
-												</div>
+												</div> -->
 												<!--end site offices detail -->
 
 
