--- a/src/main/resources/templates/layouts/editview/editUom.html
+++ b/src/main/resources/templates/layouts/editview/editUom.html
@@ -86,7 +86,7 @@
 
 										</div>
 
-										<div class="form-group col-lg-12">
+										<!-- <div class="form-group col-lg-12">
 											<label class="form-label">Measurement System</label> <select
 												class="form-control" title="measurement system"
 												th:field="*{measurementSystem}">
@@ -94,11 +94,9 @@
 												<option value="B">British</option>
 												<option value="F">French</option>
 
-												<!-- <option th:each="country :  ${countryList}"
-									th:text="${country.countryName}"
-									th:value=" ${country.countryCode}"></option> -->
+												
 											</select>
-										</div>
+										</div> -->
 
 
 									</div>
